multiple fixes userService & financialService ready
